# pycryptoapi

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.txt
pycryptoapi/: __init__.py  enums.py  exc.py  exceptions.py  mappers.py  storage.py  types.py
pycryptoapi/abstract/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/binance/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/bingx/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/bitget/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/bitunix/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/bybit/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/coinalyze/: __init__.py  client.py
pycryptoapi/coinmarketcap/: __init__.py  adapter.py  client.py
pycryptoapi/deribit/: __init__.py  client.py
pycryptoapi/fixes/: __init__.py  kcex_perpetual_fix.py  mexc_perpetual_fix.py  okx_perpetual_fix.py  xt_perpetual_fix.py
pycryptoapi/gate/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/hyperliquid/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/kcex/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/mexc/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/okx/: __init__.py  adapter.py  client.py  websocket.py
pycryptoapi/weex/: __init__.py  client.py
pycryptoapi/xt/: __init__.py  adapter.py  client.py  websocket.py
tests/: binance.py  bybit.py  coinal.py  enums.py  klines.py  okx.py  proxy_test.py  storage.py  tickers_list.py
tests/depth/: binance.py  bitget.py  (+4 more)
(+45 files in other folders)
