[project]
name = "pycryptoapi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "websockets (>=14.2,<15.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "protobuf (>=6.32.0,<7.0.0)",
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
